# api

./: .gitignore  pyproject.toml
chave_propria/api/: remetente.py
chave_propria/database/: database_connection.py  models.py
chave_propria/routers/: auth.py  cifra_remetente.py  contatos.py  message.py  ping.py  users.py
chave_propria/settings/: Settings.py
chave_propria/utils/: WebSocket_ConnectionManager.py  info_blocks.py  schemas.py
chave_propria/utils/arquivos/: escreve_chaves.py  opera_arquivos.py
chave_propria/utils/idea/: chaves.py
chave_propria/utils/security/: security.py
chave_propria/utils/websocket/: Manager.py
migrations/: env.py
migrations/versions/: 6b2f35a364f6_add_users_table.py  790b827ec8a7_add_contatos_table.py  a3bc0b3e2a1e_add_chat_id_column_to_contatos_table.py  edffef3b5526_update_chat_id_column_to_contatos_table.py
tests/: conftest.py  test_auth.py  test_db.py  test_security.py  test_users.py
